fixed some of the whitespace between the outro and step

--- a/css/styles.css
+++ b/css/styles.css
@@ -249,6 +249,12 @@ div p:last-child {
         transform: translateY(0%);
     }
 
+    .outro {
+        -moz-transform: translateY(-70%);
+        -webkit-transform: translateY(-70%);
+        transform: translateY(-70%);
+    }
+
     /* all scrolling positions set to relative */
     /* #scroll {
         position: relative;
